# windfish-core

./: CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: FindSDL2.cmake
src/: engine.c  engine.h  graphics.c  graphics.h  statemanager.c  statemanager.h  statemanager.test.c  timer.c  timer.h  windfish.c
